Fixing initial session load and exec handling
